// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly another page 1`] = `
<div class="ais-Pagination">
  <ul class="ais-Pagination-list">
    <li class="ais-Pagination-item ais-Pagination-item--firstPage">
      <a aria-label="First"
         class="ais-Pagination-link"
         href="#"
      >
        ‹‹
      </a>
    </li>
    <li class="ais-Pagination-item ais-Pagination-item--previousPage">
      <a aria-label="Previous"
         class="ais-Pagination-link"
         href="#"
      >
        ‹
      </a>
    </li>
    <li class="ais-Pagination-item ais-Pagination-item--page">
      <a aria-label="Page 4"
         class="ais-Pagination-link"
         href="#"
      >
        4
      </a>
    </li>
    <li class="ais-Pagination-item ais-Pagination-item--page">
      <a aria-label="Page 5"
         class="ais-Pagination-link"
         href="#"
      >
        5
      </a>
    </li>
    <li class="ais-Pagination-item ais-Pagination-item--page">
      <a aria-label="Page 6"
         class="ais-Pagination-link"
         href="#"
      >
        6
      </a>
    </li>
    <li class="ais-Pagination-item ais-Pagination-item--page ais-Pagination-item--selected">
      <a aria-label="Page 7"
         class="ais-Pagination-link"
         href="#"
      >
        7
      </a>
    </li>
    <li class="ais-Pagination-item ais-Pagination-item--page">
      <a aria-label="Page 8"
         class="ais-Pagination-link"
         href="#"
      >
        8
      </a>
    </li>
    <li class="ais-Pagination-item ais-Pagination-item--page">
      <a aria-label="Page 9"
         class="ais-Pagination-link"
         href="#"
      >
        9
      </a>
    </li>
    <li class="ais-Pagination-item ais-Pagination-item--page">
      <a aria-label="Page 10"
         class="ais-Pagination-link"
         href="#"
      >
        10
      </a>
    </li>
    <li class="ais-Pagination-item ais-Pagination-item--nextPage">
      <a aria-label="Next"
         class="ais-Pagination-link"
         href="#"
      >
        ›
      </a>
    </li>
    <li class="ais-Pagination-item ais-Pagination-item--lastPage">
      <a aria-label="Last"
         class="ais-Pagination-link"
         href="#"
      >
        ››
      </a>
    </li>
  </ul>
</div>
`;

exports[`renders correctly first page 1`] = `
<div class="ais-Pagination">
  <ul class="ais-Pagination-list">
    <li class="ais-Pagination-item ais-Pagination-item--firstPage ais-Pagination-item--disabled">
      <span aria-label="First"
            class="ais-Pagination-link"
      >
        ‹‹
      </span>
    </li>
    <li class="ais-Pagination-item ais-Pagination-item--previousPage ais-Pagination-item--disabled">
      <span aria-label="Previous"
            class="ais-Pagination-link"
      >
        ‹
      </span>
    </li>
    <li class="ais-Pagination-item ais-Pagination-item--page ais-Pagination-item--selected">
      <a aria-label="Page 1"
         class="ais-Pagination-link"
         href="#"
      >
        1
      </a>
    </li>
    <li class="ais-Pagination-item ais-Pagination-item--page">
      <a aria-label="Page 2"
         class="ais-Pagination-link"
         href="#"
      >
        2
      </a>
    </li>
    <li class="ais-Pagination-item ais-Pagination-item--page">
      <a aria-label="Page 3"
         class="ais-Pagination-link"
         href="#"
      >
        3
      </a>
    </li>
    <li class="ais-Pagination-item ais-Pagination-item--page">
      <a aria-label="Page 4"
         class="ais-Pagination-link"
         href="#"
      >
        4
      </a>
    </li>
    <li class="ais-Pagination-item ais-Pagination-item--page">
      <a aria-label="Page 5"
         class="ais-Pagination-link"
         href="#"
      >
        5
      </a>
    </li>
    <li class="ais-Pagination-item ais-Pagination-item--page">
      <a aria-label="Page 6"
         class="ais-Pagination-link"
         href="#"
      >
        6
      </a>
    </li>
    <li class="ais-Pagination-item ais-Pagination-item--page">
      <a aria-label="Page 7"
         class="ais-Pagination-link"
         href="#"
      >
        7
      </a>
    </li>
    <li class="ais-Pagination-item ais-Pagination-item--nextPage">
      <a aria-label="Next"
         class="ais-Pagination-link"
         href="#"
      >
        ›
      </a>
    </li>
    <li class="ais-Pagination-item ais-Pagination-item--lastPage">
      <a aria-label="Last"
         class="ais-Pagination-link"
         href="#"
      >
        ››
      </a>
    </li>
  </ul>
</div>
`;

exports[`renders correctly last page 1`] = `
<div class="ais-Pagination">
  <ul class="ais-Pagination-list">
    <li class="ais-Pagination-item ais-Pagination-item--firstPage">
      <a aria-label="First"
         class="ais-Pagination-link"
         href="#"
      >
        ‹‹
      </a>
    </li>
    <li class="ais-Pagination-item ais-Pagination-item--previousPage">
      <a aria-label="Previous"
         class="ais-Pagination-link"
         href="#"
      >
        ‹
      </a>
    </li>
    <li class="ais-Pagination-item ais-Pagination-item--page">
      <a aria-label="Page 4"
         class="ais-Pagination-link"
         href="#"
      >
        4
      </a>
    </li>
    <li class="ais-Pagination-item ais-Pagination-item--page">
      <a aria-label="Page 5"
         class="ais-Pagination-link"
         href="#"
      >
        5
      </a>
    </li>
    <li class="ais-Pagination-item ais-Pagination-item--page">
      <a aria-label="Page 6"
         class="ais-Pagination-link"
         href="#"
      >
        6
      </a>
    </li>
    <li class="ais-Pagination-item ais-Pagination-item--page">
      <a aria-label="Page 7"
         class="ais-Pagination-link"
         href="#"
      >
        7
      </a>
    </li>
    <li class="ais-Pagination-item ais-Pagination-item--page">
      <a aria-label="Page 8"
         class="ais-Pagination-link"
         href="#"
      >
        8
      </a>
    </li>
    <li class="ais-Pagination-item ais-Pagination-item--page">
      <a aria-label="Page 9"
         class="ais-Pagination-link"
         href="#"
      >
        9
      </a>
    </li>
    <li class="ais-Pagination-item ais-Pagination-item--page ais-Pagination-item--selected">
      <a aria-label="Page 10"
         class="ais-Pagination-link"
         href="#"
      >
        10
      </a>
    </li>
    <li class="ais-Pagination-item ais-Pagination-item--nextPage ais-Pagination-item--disabled">
      <span aria-label="Next"
            class="ais-Pagination-link"
      >
        ›
      </span>
    </li>
    <li class="ais-Pagination-item ais-Pagination-item--lastPage ais-Pagination-item--disabled">
      <span aria-label="Last"
            class="ais-Pagination-link"
      >
        ››
      </span>
    </li>
  </ul>
</div>
`;
